src/sass/App.scss
// @font-face {
//     font-family: Poppins;
//     src: url("../fonts/Poppins-Regular.ttf") ;
// }

// @font-face {
//     font-family: Poppins;
//     src: url("../fonts/Poppins-Bold.ttf") ;
//     font-weight: bold;
// }

// @font-face {
//     font-family: Poppins;
//     src: url("../fonts/Poppins-SemiBold.otf") ;
//     font-weight: bold;
// }

@import './colors';

/* @font-face {
    font-family: Montserrats;
    src: url("fonts/Montserrat-Bold.otf") ;
    font-weight: bold;
} */

// MUI COMPONENTS
.MuiList-root {
    width: 100%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    // font-family: Poppins;
}

.MuiTextField-root {
    width: 100%;
}

.slide-routes {
    width: 100%;
    overflow: auto!important;

    .item {
        width: 100%;

    }
}

form {
    display: flex;
    width: 100%;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

section {
    display: contents;
}

div {
    display: flex;
}

img {
    object-fit: contain;
}

::placeholder {
    color: darken($background-color, 20);
    opacity: 1;
}
  
/* width */
::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
/* box-shadow: inset 0 0 5px grey; */
    border-radius: 10px;
    margin: 1.5vw;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgb(203, 203, 203);
    border-radius: 10px;
}

/* Corner */
::-webkit-scrollbar-corner {
    display: none;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-box-shadow: 0 0 0 30px $background-color inset !important;
}

